# plan_move

./: .gitattributes  .gitignore  README.md  claude.md  install.bat  install.sh
pipeline/: build.py  common.py  export.py  pyproject.toml
pipeline/sources/: bpe.py  dvf.py  ecoles.py  etat_civil.py  filosofi.py  geometries.py  hopitaux.py  logement_social.py  loyers.py  maires.py  prenoms.py  reseaux.py  ssmsi.py  taxe_fonciere.py  transports.py
web/: index.html  package-lock.json  package.json
web/src/: compare.ts  fiche.ts  main.ts  panel.ts  permalink.ts  scoring.ts  search.ts  style.css  types.ts
