[project]
name = "plan-move-pipeline"
version = "0.1.0"
description = "Pipeline de données : open data français agrégé par commune pour la carte Plan Move"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "scipy>=1.14",
    "pyproj>=3.6",
    "py7zr>=1.1.3",
    "pyshp>=3.1.4",
]

[tool.uv]
package = false
